code/java/QuotesAPIforDigitalPortals/v2/README.md
<img alt="FactSet" src="https://www.factset.com/hubfs/Assets/images/factset-logo.svg" height="56" width="290">

# Quotes API for Digital Portals client library for Java

[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/quotesapifordigitalportals)](https://search.maven.org/artifact/com.factset.sdk/quotesapifordigitalportals)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)

This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: 0.9.1
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>0.10.0</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>quotesapifordigitalportals</artifactId>
  <version>0.9.1</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:0.10.0"
    implementation "com.factset.sdk:quotesapifordigitalportals:0.9.1"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

```java

import com.factset.sdk.QuotesAPIforDigitalPortals.*;
import com.factset.sdk.QuotesAPIforDigitalPortals.auth.*;
import com.factset.sdk.QuotesAPIforDigitalPortals.models.*;
import com.factset.sdk.QuotesAPIforDigitalPortals.api.BasicApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class BasicApiExample {

    public static void main(String[] args) {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient();
        // HttpBasicAuth FactSetApiKey = (HttpBasicAuth) defaultClient.getAuthentication("FactSetApiKey");
        // FactSetApiKey.setUsername("YOUR USERNAME");
        // FactSetApiKey.setPassword("YOUR PASSWORD");

        BasicApi apiInstance = new BasicApi(defaultClient);
        java.util.Set<String> attributes = Arrays.asList(); // java.util.Set<String> | Limit the attributes returned in the response to the specified set.
        try {
            InlineResponse200 result = apiInstance.getBasicAssetClassList(attributes);
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling BasicApi#getBasicAssetClassList");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.QuotesAPIforDigitalPortals.*;
import com.factset.sdk.QuotesAPIforDigitalPortals.api.BasicApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

BasicApi apiInstance = new BasicApi(defaultClient);

```


## Documentation for API Endpoints

All URIs are relative to *http://api.factset.com/wealth/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*BasicApi* | [**getBasicAssetClassList**](docs/BasicApi.md#getBasicAssetClassList) | **GET** /basic/assetClass/list | List of asset classes.
*BasicApi* | [**getBasicBenchmarkTypeList**](docs/BasicApi.md#getBasicBenchmarkTypeList) | **GET** /basic/benchmark/type/list | List of benchmark types.
*BasicApi* | [**getBasicFrequencyTypeList**](docs/BasicApi.md#getBasicFrequencyTypeList) | **GET** /basic/frequency/type/list | List of frequency types.
*BasicApi* | [**getBasicLanguageGet**](docs/BasicApi.md#getBasicLanguageGet) | **GET** /basic/language/get | Details for a language.
*BasicApi* | [**getBasicLanguageGetByCode**](docs/BasicApi.md#getBasicLanguageGetByCode) | **GET** /basic/language/getByCode | Details for a language identified by code.
*BasicApi* | [**getBasicLanguageList**](docs/BasicApi.md#getBasicLanguageList) | **GET** /basic/language/list | List of languages.
*BasicApi* | [**getBasicMarketGet**](docs/BasicApi.md#getBasicMarketGet) | **GET** /basic/market/get | Details of a market.
*BasicApi* | [**getBasicMarketGroupList**](docs/BasicApi.md#getBasicMarketGroupList) | **GET** /basic/market/group/list | List of market groups.
*BasicApi* | [**getBasicMarketTypeList**](docs/BasicApi.md#getBasicMarketTypeList) | **GET** /basic/market/type/list | List of market types.
*BasicApi* | [**getBasicMediaKindList**](docs/BasicApi.md#getBasicMediaKindList) | **GET** /basic/media/kind/list | List of media kinds.
*BasicApi* | [**getBasicRegionContinentGet**](docs/BasicApi.md#getBasicRegionContinentGet) | **GET** /basic/region/continent/get | Details for a continent.
*BasicApi* | [**getBasicRegionContinentList**](docs/BasicApi.md#getBasicRegionContinentList) | **GET** /basic/region/continent/list | List of continents.
*BasicApi* | [**getBasicRegionCountryGet**](docs/BasicApi.md#getBasicRegionCountryGet) | **GET** /basic/region/country/get | Details for a country.
*BasicApi* | [**getBasicRegionCountryGetByCode**](docs/BasicApi.md#getBasicRegionCountryGetByCode) | **GET** /basic/region/country/getByCode | Details for a country identified by code.
*BasicApi* | [**getBasicRegionCountryList**](docs/BasicApi.md#getBasicRegionCountryList) | **GET** /basic/region/country/list | List of countries.
*BasicApi* | [**getBasicRegionGet**](docs/BasicApi.md#getBasicRegionGet) | **GET** /basic/region/get | Details for a region.
*BasicApi* | [**getBasicRegionList**](docs/BasicApi.md#getBasicRegionList) | **GET** /basic/region/list | List of regions.
*BasicApi* | [**getBasicTimezoneGet**](docs/BasicApi.md#getBasicTimezoneGet) | **GET** /basic/timezone/get | Details of a timezone.
*BasicApi* | [**getBasicTimezoneGetByName**](docs/BasicApi.md#getBasicTimezoneGetByName) | **GET** /basic/timezone/getByName | Details of a timezone identified by name.
*BasicApi* | [**getBasicValueUnitAlternativeList**](docs/BasicApi.md#getBasicValueUnitAlternativeList) | **GET** /basic/valueUnit/alternative/list | List of alternative units.
*BasicApi* | [**getBasicValueUnitCurrencyFractionalGet**](docs/BasicApi.md#getBasicValueUnitCurrencyFractionalGet) | **GET** /basic/valueUnit/currency/fractional/get | Details of a fractional currency.
*BasicApi* | [**getBasicValueUnitCurrencyFractionalList**](docs/BasicApi.md#getBasicValueUnitCurrencyFractionalList) | **GET** /basic/valueUnit/currency/fractional/list | List of fractional currencies.
*BasicApi* | [**getBasicValueUnitGet**](docs/BasicApi.md#getBasicValueUnitGet) | **GET** /basic/valueUnit/get | Details of a value unit.
*BasicApi* | [**postBasicBackgroundTextTypeList**](docs/BasicApi.md#postBasicBackgroundTextTypeList) | **POST** /basic/backgroundText/type/list | List of background text types.
*BasicApi* | [**postBasicDeliveryList**](docs/BasicApi.md#postBasicDeliveryList) | **POST** /basic/delivery/list | List of deliveries.
*BasicApi* | [**postBasicMarketList**](docs/BasicApi.md#postBasicMarketList) | **POST** /basic/market/list | List of markets.
*BasicApi* | [**postBasicMediaTypeList**](docs/BasicApi.md#postBasicMediaTypeList) | **POST** /basic/media/type/list | List of Internet media types.
*BasicApi* | [**postBasicMicOperatingList**](docs/BasicApi.md#postBasicMicOperatingList) | **POST** /basic/mic/operating/list | List of operating market identifier codes (MIC).
*BasicApi* | [**postBasicTimezoneList**](docs/BasicApi.md#postBasicTimezoneList) | **POST** /basic/timezone/list | List of timezones.
*BasicApi* | [**postBasicValueUnitCurrencyList**](docs/BasicApi.md#postBasicValueUnitCurrencyList) | **POST** /basic/valueUnit/currency/list | List of currencies.
*BasicApi* | [**postBasicValueUnitCurrencyMainList**](docs/BasicApi.md#postBasicValueUnitCurrencyMainList) | **POST** /basic/valueUnit/currency/main/list | List of main currencies.
*BasicApi* | [**postBasicValueUnitList**](docs/BasicApi.md#postBasicValueUnitList) | **POST** /basic/valueUnit/list | List of value units.
*CategoryApi* | [**getCategoryDatasetList**](docs/CategoryApi.md#getCategoryDatasetList) | **GET** /category/dataset/list | List of entitled category datasets.
*CategoryApi* | [**getCategoryGet**](docs/CategoryApi.md#getCategoryGet) | **GET** /category/get | Details of a category.
*CategoryApi* | [**getCategoryInstrumentList**](docs/CategoryApi.md#getCategoryInstrumentList) | **GET** /category/instrument/list | List of instruments where a specific dataset has assigned a given category.
*CategoryApi* | [**getCategoryLevelGet**](docs/CategoryApi.md#getCategoryLevelGet) | **GET** /category/level/get | Details of a category level.
*CategoryApi* | [**getCategoryList**](docs/CategoryApi.md#getCategoryList) | **GET** /category/list | List of categories.
*CategoryApi* | [**getCategoryListByLevel**](docs/CategoryApi.md#getCategoryListByLevel) | **GET** /category/listByLevel | List of categories assigned to a category level.
*CategoryApi* | [**getCategoryListBySystem**](docs/CategoryApi.md#getCategoryListBySystem) | **GET** /category/listBySystem | List of categories assigned to a category system.
*CategoryApi* | [**getCategoryPathGet**](docs/CategoryApi.md#getCategoryPathGet) | **GET** /category/path/get | Path from the first level to the level of a specific category.
*CategoryApi* | [**getCategorySystemGet**](docs/CategoryApi.md#getCategorySystemGet) | **GET** /category/system/get | Details of an entitled category system.
*CategoryApi* | [**getCategorySystemList**](docs/CategoryApi.md#getCategorySystemList) | **GET** /category/system/list | List of entitled category systems.
*CategoryApi* | [**getCategorySystemTypeList**](docs/CategoryApi.md#getCategorySystemTypeList) | **GET** /category/system/type/list | List of category system types.
*InstrumentApi* | [**getInstrumentBackgroundTextListByInstrument**](docs/InstrumentApi.md#getInstrumentBackgroundTextListByInstrument) | **GET** /instrument/backgroundText/listByInstrument | Background texts of an instrument.
*InstrumentApi* | [**getInstrumentCompliancePropertyListByInstrument**](docs/InstrumentApi.md#getInstrumentCompliancePropertyListByInstrument) | **GET** /instrument/complianceProperty/listByInstrument | Compliance properties of an instrument.
*InstrumentApi* | [**getInstrumentCompositeGet**](docs/InstrumentApi.md#getInstrumentCompositeGet) | **GET** /instrument/composite/get | Composite instrument and its components.
*InstrumentApi* | [**getInstrumentCouponDayCountConventionTypeList**](docs/InstrumentApi.md#getInstrumentCouponDayCountConventionTypeList) | **GET** /instrument/coupon/dayCountConvention/type/list | List of day count convention types.
*InstrumentApi* | [**getInstrumentCouponInterestRateTypeList**](docs/InstrumentApi.md#getInstrumentCouponInterestRateTypeList) | **GET** /instrument/coupon/interestRate/type/list | List of interest rate types.
*InstrumentApi* | [**getInstrumentCouponKeyDataGet**](docs/InstrumentApi.md#getInstrumentCouponKeyDataGet) | **GET** /instrument/coupon/keyData/get | Interest rate details for selected periods of an interest-bearing instrument.
*InstrumentApi* | [**getInstrumentCouponList**](docs/InstrumentApi.md#getInstrumentCouponList) | **GET** /instrument/coupon/list | List of coupons for an interest-bearing instrument.
*InstrumentApi* | [**getInstrumentCrossReferenceGetByISIN**](docs/InstrumentApi.md#getInstrumentCrossReferenceGetByISIN) | **GET** /instrument/crossReference/getByISIN | Translate ISIN to instrument.
*InstrumentApi* | [**getInstrumentCrossReferenceGetByWKN**](docs/InstrumentApi.md#getInstrumentCrossReferenceGetByWKN) | **GET** /instrument/crossReference/getByWKN | Translate WKN to instrument.
*InstrumentApi* | [**getInstrumentCrossReferenceHistoryGetByISIN**](docs/InstrumentApi.md#getInstrumentCrossReferenceHistoryGetByISIN) | **GET** /instrument/crossReference/history/getByISIN | ISIN to instrument translation history.
*InstrumentApi* | [**getInstrumentCrossReferenceHistoryGetByWKN**](docs/InstrumentApi.md#getInstrumentCrossReferenceHistoryGetByWKN) | **GET** /instrument/crossReference/history/getByWKN | WKN to instrument translation history.
*InstrumentApi* | [**getInstrumentExchangeRateGet**](docs/InstrumentApi.md#getInstrumentExchangeRateGet) | **GET** /instrument/exchangeRate/get | Retrieve an exchange rate instrument identifier.
*InstrumentApi* | [**getInstrumentExchangeRateGetByISOCode**](docs/InstrumentApi.md#getInstrumentExchangeRateGetByISOCode) | **GET** /instrument/exchangeRate/getByISOCode | Retrieve an exchange rate instrument identifier.
*InstrumentApi* | [**getInstrumentGet**](docs/InstrumentApi.md#getInstrumentGet) | **GET** /instrument/get | Basic data for an instrument.
*InstrumentApi* | [**getInstrumentGetByNotation**](docs/InstrumentApi.md#getInstrumentGetByNotation) | **GET** /instrument/getByNotation | Basic data for an instrument.
*InstrumentApi* | [**getInstrumentLegalEntityBackgroundTextListByInstrument**](docs/InstrumentApi.md#getInstrumentLegalEntityBackgroundTextListByInstrument) | **GET** /instrument/legalEntity/backgroundText/listByInstrument | Role-specific background texts of legal entities related to an instrument.
*InstrumentApi* | [**getInstrumentLegalEntityCompliancePropertyListByInstrument**](docs/InstrumentApi.md#getInstrumentLegalEntityCompliancePropertyListByInstrument) | **GET** /instrument/legalEntity/complianceProperty/listByInstrument | Role-specific compliance properties of legal entities related to an instrument.
*InstrumentApi* | [**getInstrumentMifidGet**](docs/InstrumentApi.md#getInstrumentMifidGet) | **GET** /instrument/mifid/get | MiFID II data for a financial instrument.
*InstrumentApi* | [**getInstrumentSearchBasic**](docs/InstrumentApi.md#getInstrumentSearchBasic) | **GET** /instrument/search/basic | Basic search for instruments.
*InstrumentApi* | [**postInstrumentBackgroundTextTypeList**](docs/InstrumentApi.md#postInstrumentBackgroundTextTypeList) | **POST** /instrument/backgroundText/type/list | List of background text types for instruments.
*InstrumentApi* | [**postInstrumentBenchmarkList**](docs/InstrumentApi.md#postInstrumentBenchmarkList) | **POST** /instrument/benchmark/list | List of benchmarks of a financial instrument.
*InstrumentApi* | [**postInstrumentCategoryList**](docs/InstrumentApi.md#postInstrumentCategoryList) | **POST** /instrument/category/list | List of categories assigned to a specific instrument the application is entitled to see.
*InstrumentApi* | [**postInstrumentCompliancePropertyList**](docs/InstrumentApi.md#postInstrumentCompliancePropertyList) | **POST** /instrument/complianceProperty/list | List of compliance properties for instruments.
*InstrumentApi* | [**postInstrumentCrossReferenceListByISIN**](docs/InstrumentApi.md#postInstrumentCrossReferenceListByISIN) | **POST** /instrument/crossReference/listByISIN | Translate a list of ISINs to instruments.
*InstrumentApi* | [**postInstrumentCrossReferenceListByWKN**](docs/InstrumentApi.md#postInstrumentCrossReferenceListByWKN) | **POST** /instrument/crossReference/listByWKN | Translate a list of WKNs to instruments.
*InstrumentApi* | [**postInstrumentRatingGradeList**](docs/InstrumentApi.md#postInstrumentRatingGradeList) | **POST** /instrument/rating/grade/list | List of rating grades for a list of instruments.
*NotationApi* | [**getNotationCrossReferenceFactSetIdentifierGet**](docs/NotationApi.md#getNotationCrossReferenceFactSetIdentifierGet) | **GET** /notation/crossReference/factSetIdentifier/get | Retrieve FactSet identifiers for a given notation.
*NotationApi* | [**getNotationCrossReferenceGetByFactSetMarketSymbol**](docs/NotationApi.md#getNotationCrossReferenceGetByFactSetMarketSymbol) | **GET** /notation/crossReference/getByFactSetMarketSymbol | Translate a FactSet market symbol to a notation.
*NotationApi* | [**getNotationGet**](docs/NotationApi.md#getNotationGet) | **GET** /notation/get | Basic data for a notation.
*NotationApi* | [**getNotationKeyFiguresMonth1Get**](docs/NotationApi.md#getNotationKeyFiguresMonth1Get) | **GET** /notation/keyFigures/month/1/get | End-of-day (EOD) key figures for the time range of one month.
*NotationApi* | [**getNotationKeyFiguresMonth1List**](docs/NotationApi.md#getNotationKeyFiguresMonth1List) | **GET** /notation/keyFigures/month/1/list | End-of-day (EOD) key figures for the time range of one month, for a list of notations.
*NotationApi* | [**getNotationKeyFiguresMonth3Get**](docs/NotationApi.md#getNotationKeyFiguresMonth3Get) | **GET** /notation/keyFigures/month/3/get | End-of-day (EOD) key figures for the time range of three months.
*NotationApi* | [**getNotationKeyFiguresMonth3List**](docs/NotationApi.md#getNotationKeyFiguresMonth3List) | **GET** /notation/keyFigures/month/3/list | End-of-day (EOD) key figures for the time range of three months, for a list of notations.
*NotationApi* | [**getNotationKeyFiguresMonth6Get**](docs/NotationApi.md#getNotationKeyFiguresMonth6Get) | **GET** /notation/keyFigures/month/6/get | End-of-day (EOD) key figures for the time range of six months.
*NotationApi* | [**getNotationKeyFiguresMonth6List**](docs/NotationApi.md#getNotationKeyFiguresMonth6List) | **GET** /notation/keyFigures/month/6/list | End-of-day (EOD) key figures for the time range of six months, for a list of notations.
*NotationApi* | [**getNotationKeyFiguresWeek1Get**](docs/NotationApi.md#getNotationKeyFiguresWeek1Get) | **GET** /notation/keyFigures/week/1/get | End-of-day (EOD) key figures for the time range of one week.
*NotationApi* | [**getNotationKeyFiguresWeek1List**](docs/NotationApi.md#getNotationKeyFiguresWeek1List) | **GET** /notation/keyFigures/week/1/list | End-of-day (EOD) key figures for the time range of one week, for a list of notations.
*NotationApi* | [**getNotationKeyFiguresYear1Get**](docs/NotationApi.md#getNotationKeyFiguresYear1Get) | **GET** /notation/keyFigures/year/1/get | End-of-day (EOD) key figures for the time range of one year.
*NotationApi* | [**getNotationKeyFiguresYear1List**](docs/NotationApi.md#getNotationKeyFiguresYear1List) | **GET** /notation/keyFigures/year/1/list | End-of-day (EOD) key figures for the time range of one year, for a list of notations.
*NotationApi* | [**getNotationKeyFiguresYear3Get**](docs/NotationApi.md#getNotationKeyFiguresYear3Get) | **GET** /notation/keyFigures/year/3/get | End-of-day (EOD) key figures for the time range of three years.
*NotationApi* | [**getNotationKeyFiguresYear3List**](docs/NotationApi.md#getNotationKeyFiguresYear3List) | **GET** /notation/keyFigures/year/3/list | End-of-day (EOD) key figures for the time range of three years, for a list of notations.
*NotationApi* | [**getNotationKeyFiguresYear5Get**](docs/NotationApi.md#getNotationKeyFiguresYear5Get) | **GET** /notation/keyFigures/year/5/get | End-of-day (EOD) key figures for the time range of five years.
*NotationApi* | [**getNotationKeyFiguresYear5List**](docs/NotationApi.md#getNotationKeyFiguresYear5List) | **GET** /notation/keyFigures/year/5/list | End-of-day (EOD) key figures for the time range of five years, for a list of notations.
*NotationApi* | [**getNotationKeyFiguresYearToDateGet**](docs/NotationApi.md#getNotationKeyFiguresYearToDateGet) | **GET** /notation/keyFigures/yearToDate/get | End-of-day (EOD) key figures for the time range year-to-date (YTD)..
*NotationApi* | [**getNotationKeyFiguresYearToDateList**](docs/NotationApi.md#getNotationKeyFiguresYearToDateList) | **GET** /notation/keyFigures/yearToDate/list | End-of-day (EOD) key figures for the time range year-to-date (YTD), for a list of notations..
*NotationApi* | [**getNotationList**](docs/NotationApi.md#getNotationList) | **GET** /notation/list | Basic data for a list of notations.
*NotationApi* | [**getNotationSearchBasic**](docs/NotationApi.md#getNotationSearchBasic) | **GET** /notation/search/basic | Basic search for notations.
*NotationApi* | [**getNotationSearchByTextRankedByVolume**](docs/NotationApi.md#getNotationSearchByTextRankedByVolume) | **GET** /notation/searchByTextRankedByVolume | Basic search for notations.
*NotationApi* | [**getNotationStatusGet**](docs/NotationApi.md#getNotationStatusGet) | **GET** /notation/status/get | Intraday trading status of a notation.
*NotationApi* | [**postNotationCrossReferenceFactSetIdentifierListByFactSetIdentifier**](docs/NotationApi.md#postNotationCrossReferenceFactSetIdentifierListByFactSetIdentifier) | **POST** /notation/crossReference/factSetIdentifier/listByFactSetIdentifier | Retrieve a list of notations for a given FactSet identifier.
*NotationApi* | [**postNotationCrossReferenceFactSetIdentifierListByInstrument**](docs/NotationApi.md#postNotationCrossReferenceFactSetIdentifierListByInstrument) | **POST** /notation/crossReference/factSetIdentifier/listByInstrument | Retrieve a list of FactSet identifiers for a given instrument.
*NotationApi* | [**postNotationCrossReferenceListByISIN**](docs/NotationApi.md#postNotationCrossReferenceListByISIN) | **POST** /notation/crossReference/listByISIN | List of entitled notations.
*NotationApi* | [**postNotationCrossReferenceListByInstrument**](docs/NotationApi.md#postNotationCrossReferenceListByInstrument) | **POST** /notation/crossReference/listByInstrument | List of entitled notations.
*NotationApi* | [**postNotationCrossReferenceListBySymbol**](docs/NotationApi.md#postNotationCrossReferenceListBySymbol) | **POST** /notation/crossReference/listBySymbol | List of entitled notations.
*NotationApi* | [**postNotationSearchByText**](docs/NotationApi.md#postNotationSearchByText) | **POST** /notation/searchByText | Text-based search for notations.
*PricesApi* | [**getPricesBidAskGet**](docs/PricesApi.md#getPricesBidAskGet) | **GET** /prices/bidAsk/get | Current bid and ask prices (best bid / offer) for a notation.
*PricesApi* | [**getPricesBidAskList**](docs/PricesApi.md#getPricesBidAskList) | **GET** /prices/bidAsk/list | Current bid and ask prices (best bid / offer) for a list of notations.
*PricesApi* | [**getPricesGet**](docs/PricesApi.md#getPricesGet) | **GET** /prices/get | Overview of trading on the current trading day, including the latest price, for a notation.
*PricesApi* | [**getPricesList**](docs/PricesApi.md#getPricesList) | **GET** /prices/list | Overview of trading on the current trading day, including the latest price, for a list of notations.
*PricesApi* | [**getPricesOrderbookAggregatedGet**](docs/PricesApi.md#getPricesOrderbookAggregatedGet) | **GET** /prices/orderbook/aggregated/get | Orderbook aggregated by price.
*PricesApi* | [**getPricesOrderbookFullGet**](docs/PricesApi.md#getPricesOrderbookFullGet) | **GET** /prices/orderbook/full/get | Full orderbook
*PricesApi* | [**getPricesTradingScheduleEventTypeList**](docs/PricesApi.md#getPricesTradingScheduleEventTypeList) | **GET** /prices/tradingSchedule/event/type/list | Trading schedule event types.
*PricesApi* | [**postPricesTradingScheduleEventList**](docs/PricesApi.md#postPricesTradingScheduleEventList) | **POST** /prices/tradingSchedule/event/list | Sequence of market-related events.


## Documentation for Models

 - [BasicBackgroundTextTypeListData](docs/BasicBackgroundTextTypeListData.md)
 - [BasicBackgroundTextTypeListDataFilter](docs/BasicBackgroundTextTypeListDataFilter.md)
 - [BasicBackgroundTextTypeListMeta](docs/BasicBackgroundTextTypeListMeta.md)
 - [BasicDeliveryListData](docs/BasicDeliveryListData.md)
 - [BasicDeliveryListDataFilter](docs/BasicDeliveryListDataFilter.md)
 - [BasicDeliveryListMeta](docs/BasicDeliveryListMeta.md)
 - [BasicMarketListData](docs/BasicMarketListData.md)
 - [BasicMarketListDataFilter](docs/BasicMarketListDataFilter.md)
 - [BasicMarketListDataFilterMarkets](docs/BasicMarketListDataFilterMarkets.md)
 - [BasicMarketListMeta](docs/BasicMarketListMeta.md)
 - [BasicMarketListMetaPagination](docs/BasicMarketListMetaPagination.md)
 - [BasicMediaTypeListData](docs/BasicMediaTypeListData.md)
 - [BasicMediaTypeListDataFilter](docs/BasicMediaTypeListDataFilter.md)
 - [BasicMediaTypeListMeta](docs/BasicMediaTypeListMeta.md)
 - [BasicMicOperatingListData](docs/BasicMicOperatingListData.md)
 - [BasicMicOperatingListDataFilter](docs/BasicMicOperatingListDataFilter.md)
 - [BasicMicOperatingListMeta](docs/BasicMicOperatingListMeta.md)
 - [BasicTimezoneListData](docs/BasicTimezoneListData.md)
 - [BasicTimezoneListDataFilter](docs/BasicTimezoneListDataFilter.md)
 - [BasicValueUnitCurrencyMainListData](docs/BasicValueUnitCurrencyMainListData.md)
 - [BasicValueUnitCurrencyMainListDataFilter](docs/BasicValueUnitCurrencyMainListDataFilter.md)
 - [BasicValueUnitListData](docs/BasicValueUnitListData.md)
 - [BasicValueUnitListDataFilter](docs/BasicValueUnitListDataFilter.md)
 - [BasicValueUnitListMeta](docs/BasicValueUnitListMeta.md)
 - [CursorBasedPaginationOutputObject](docs/CursorBasedPaginationOutputObject.md)
 - [CursorBasedPaginationOutputObjectWithoutTotal](docs/CursorBasedPaginationOutputObjectWithoutTotal.md)
 - [ErrorMetaObject](docs/ErrorMetaObject.md)
 - [InlineObject](docs/InlineObject.md)
 - [InlineObject1](docs/InlineObject1.md)
 - [InlineObject10](docs/InlineObject10.md)
 - [InlineObject11](docs/InlineObject11.md)
 - [InlineObject12](docs/InlineObject12.md)
 - [InlineObject13](docs/InlineObject13.md)
 - [InlineObject14](docs/InlineObject14.md)
 - [InlineObject15](docs/InlineObject15.md)
 - [InlineObject16](docs/InlineObject16.md)
 - [InlineObject17](docs/InlineObject17.md)
 - [InlineObject18](docs/InlineObject18.md)
 - [InlineObject19](docs/InlineObject19.md)
 - [InlineObject2](docs/InlineObject2.md)
 - [InlineObject20](docs/InlineObject20.md)
 - [InlineObject21](docs/InlineObject21.md)
 - [InlineObject22](docs/InlineObject22.md)
 - [InlineObject3](docs/InlineObject3.md)
 - [InlineObject4](docs/InlineObject4.md)
 - [InlineObject5](docs/InlineObject5.md)
 - [InlineObject6](docs/InlineObject6.md)
 - [InlineObject7](docs/InlineObject7.md)
 - [InlineObject8](docs/InlineObject8.md)
 - [InlineObject9](docs/InlineObject9.md)
 - [InlineResponse200](docs/InlineResponse200.md)
 - [InlineResponse2001](docs/InlineResponse2001.md)
 - [InlineResponse20010](docs/InlineResponse20010.md)
 - [InlineResponse20010Data](docs/InlineResponse20010Data.md)
 - [InlineResponse20011](docs/InlineResponse20011.md)
 - [InlineResponse20011Data](docs/InlineResponse20011Data.md)
 - [InlineResponse20012](docs/InlineResponse20012.md)
 - [InlineResponse20012Data](docs/InlineResponse20012Data.md)
 - [InlineResponse20013](docs/InlineResponse20013.md)
 - [InlineResponse20013Data](docs/InlineResponse20013Data.md)
 - [InlineResponse20013Kind](docs/InlineResponse20013Kind.md)
 - [InlineResponse20014](docs/InlineResponse20014.md)
 - [InlineResponse20014Data](docs/InlineResponse20014Data.md)
 - [InlineResponse20015](docs/InlineResponse20015.md)
 - [InlineResponse20015Data](docs/InlineResponse20015Data.md)
 - [InlineResponse20015DataNestedRegions](docs/InlineResponse20015DataNestedRegions.md)
 - [InlineResponse20016](docs/InlineResponse20016.md)
 - [InlineResponse20016Data](docs/InlineResponse20016Data.md)
 - [InlineResponse20017](docs/InlineResponse20017.md)
 - [InlineResponse20017Data](docs/InlineResponse20017Data.md)
 - [InlineResponse20017DataCountries](docs/InlineResponse20017DataCountries.md)
 - [InlineResponse20018](docs/InlineResponse20018.md)
 - [InlineResponse20018Data](docs/InlineResponse20018Data.md)
 - [InlineResponse20019](docs/InlineResponse20019.md)
 - [InlineResponse20019Data](docs/InlineResponse20019Data.md)
 - [InlineResponse20019DataSubdivisions](docs/InlineResponse20019DataSubdivisions.md)
 - [InlineResponse2001Data](docs/InlineResponse2001Data.md)
 - [InlineResponse2002](docs/InlineResponse2002.md)
 - [InlineResponse20020](docs/InlineResponse20020.md)
 - [InlineResponse20020Data](docs/InlineResponse20020Data.md)
 - [InlineResponse20020DataSubdivisions](docs/InlineResponse20020DataSubdivisions.md)
 - [InlineResponse20021](docs/InlineResponse20021.md)
 - [InlineResponse20021Data](docs/InlineResponse20021Data.md)
 - [InlineResponse20022](docs/InlineResponse20022.md)
 - [InlineResponse20022Data](docs/InlineResponse20022Data.md)
 - [InlineResponse20023](docs/InlineResponse20023.md)
 - [InlineResponse20023Data](docs/InlineResponse20023Data.md)
 - [InlineResponse20024](docs/InlineResponse20024.md)
 - [InlineResponse20024Data](docs/InlineResponse20024Data.md)
 - [InlineResponse20025](docs/InlineResponse20025.md)
 - [InlineResponse20025Data](docs/InlineResponse20025Data.md)
 - [InlineResponse20026](docs/InlineResponse20026.md)
 - [InlineResponse20026Data](docs/InlineResponse20026Data.md)
 - [InlineResponse20027](docs/InlineResponse20027.md)
 - [InlineResponse20027Data](docs/InlineResponse20027Data.md)
 - [InlineResponse20028](docs/InlineResponse20028.md)
 - [InlineResponse20028Data](docs/InlineResponse20028Data.md)
 - [InlineResponse20028DataMainCurrency](docs/InlineResponse20028DataMainCurrency.md)
 - [InlineResponse20029](docs/InlineResponse20029.md)
 - [InlineResponse20029Data](docs/InlineResponse20029Data.md)
 - [InlineResponse20029MainCurrency](docs/InlineResponse20029MainCurrency.md)
 - [InlineResponse2002Data](docs/InlineResponse2002Data.md)
 - [InlineResponse2003](docs/InlineResponse2003.md)
 - [InlineResponse20030](docs/InlineResponse20030.md)
 - [InlineResponse20030Data](docs/InlineResponse20030Data.md)
 - [InlineResponse20031](docs/InlineResponse20031.md)
 - [InlineResponse20031Data](docs/InlineResponse20031Data.md)
 - [InlineResponse20031DataLevel](docs/InlineResponse20031DataLevel.md)
 - [InlineResponse20031DataParent](docs/InlineResponse20031DataParent.md)
 - [InlineResponse20031DataParentLevel](docs/InlineResponse20031DataParentLevel.md)
 - [InlineResponse20031DataSystem](docs/InlineResponse20031DataSystem.md)
 - [InlineResponse20032](docs/InlineResponse20032.md)
 - [InlineResponse20032Data](docs/InlineResponse20032Data.md)
 - [InlineResponse20032DataCategories](docs/InlineResponse20032DataCategories.md)
 - [InlineResponse20033](docs/InlineResponse20033.md)
 - [InlineResponse20033Data](docs/InlineResponse20033Data.md)
 - [InlineResponse20033DataCategories](docs/InlineResponse20033DataCategories.md)
 - [InlineResponse20033DataParent](docs/InlineResponse20033DataParent.md)
 - [InlineResponse20033DataParent1](docs/InlineResponse20033DataParent1.md)
 - [InlineResponse20033Meta](docs/InlineResponse20033Meta.md)
 - [InlineResponse20034](docs/InlineResponse20034.md)
 - [InlineResponse20034Data](docs/InlineResponse20034Data.md)
 - [InlineResponse20034DataCategories](docs/InlineResponse20034DataCategories.md)
 - [InlineResponse20034DataLevel](docs/InlineResponse20034DataLevel.md)
 - [InlineResponse20034DataParent](docs/InlineResponse20034DataParent.md)
 - [InlineResponse20035](docs/InlineResponse20035.md)
 - [InlineResponse20035Data](docs/InlineResponse20035Data.md)
 - [InlineResponse20035Delivery](docs/InlineResponse20035Delivery.md)
 - [InlineResponse20035System](docs/InlineResponse20035System.md)
 - [InlineResponse20036](docs/InlineResponse20036.md)
 - [InlineResponse20036Data](docs/InlineResponse20036Data.md)
 - [InlineResponse20036Fsym](docs/InlineResponse20036Fsym.md)
 - [InlineResponse20036FsymSecurity](docs/InlineResponse20036FsymSecurity.md)
 - [InlineResponse20036Meta](docs/InlineResponse20036Meta.md)
 - [InlineResponse20037](docs/InlineResponse20037.md)
 - [InlineResponse20037Data](docs/InlineResponse20037Data.md)
 - [InlineResponse20037DataSystem](docs/InlineResponse20037DataSystem.md)
 - [InlineResponse20038](docs/InlineResponse20038.md)
 - [InlineResponse20038Data](docs/InlineResponse20038Data.md)
 - [InlineResponse20038DataCategories](docs/InlineResponse20038DataCategories.md)
 - [InlineResponse20039](docs/InlineResponse20039.md)
 - [InlineResponse20039Data](docs/InlineResponse20039Data.md)
 - [InlineResponse20039DataLevels](docs/InlineResponse20039DataLevels.md)
 - [InlineResponse20039DataType](docs/InlineResponse20039DataType.md)
 - [InlineResponse2003Data](docs/InlineResponse2003Data.md)
 - [InlineResponse2004](docs/InlineResponse2004.md)
 - [InlineResponse20040](docs/InlineResponse20040.md)
 - [InlineResponse20040Data](docs/InlineResponse20040Data.md)
 - [InlineResponse20041](docs/InlineResponse20041.md)
 - [InlineResponse20041Data](docs/InlineResponse20041Data.md)
 - [InlineResponse20042](docs/InlineResponse20042.md)
 - [InlineResponse20042Data](docs/InlineResponse20042Data.md)
 - [InlineResponse20042DataAssetClass](docs/InlineResponse20042DataAssetClass.md)
 - [InlineResponse20042DataNsin](docs/InlineResponse20042DataNsin.md)
 - [InlineResponse20042DataType](docs/InlineResponse20042DataType.md)
 - [InlineResponse20043](docs/InlineResponse20043.md)
 - [InlineResponse20043Data](docs/InlineResponse20043Data.md)
 - [InlineResponse20044](docs/InlineResponse20044.md)
 - [InlineResponse20044Data](docs/InlineResponse20044Data.md)
 - [InlineResponse20044Type](docs/InlineResponse20044Type.md)
 - [InlineResponse20045](docs/InlineResponse20045.md)
 - [InlineResponse20045Data](docs/InlineResponse20045Data.md)
 - [InlineResponse20046](docs/InlineResponse20046.md)
 - [InlineResponse20046Data](docs/InlineResponse20046Data.md)
 - [InlineResponse20046Notation](docs/InlineResponse20046Notation.md)
 - [InlineResponse20046NotationInstrument](docs/InlineResponse20046NotationInstrument.md)
 - [InlineResponse20046Type](docs/InlineResponse20046Type.md)
 - [InlineResponse20047](docs/InlineResponse20047.md)
 - [InlineResponse20047Data](docs/InlineResponse20047Data.md)
 - [InlineResponse20047Dataset](docs/InlineResponse20047Dataset.md)
 - [InlineResponse20048](docs/InlineResponse20048.md)
 - [InlineResponse20048Data](docs/InlineResponse20048Data.md)
 - [InlineResponse20049](docs/InlineResponse20049.md)
 - [InlineResponse2004Data](docs/InlineResponse2004Data.md)
 - [InlineResponse2005](docs/InlineResponse2005.md)
 - [InlineResponse20050](docs/InlineResponse20050.md)
 - [InlineResponse20050Data](docs/InlineResponse20050Data.md)
 - [InlineResponse20050DataComponents](docs/InlineResponse20050DataComponents.md)
 - [InlineResponse20050DataNotation](docs/InlineResponse20050DataNotation.md)
 - [InlineResponse20050DataNotationInstrument](docs/InlineResponse20050DataNotationInstrument.md)
 - [InlineResponse20050DataNotationOperatingMIC](docs/InlineResponse20050DataNotationOperatingMIC.md)
 - [InlineResponse20050DataValueUnit](docs/InlineResponse20050DataValueUnit.md)
 - [InlineResponse20051](docs/InlineResponse20051.md)
 - [InlineResponse20051Data](docs/InlineResponse20051Data.md)
 - [InlineResponse20051DataCoupons](docs/InlineResponse20051DataCoupons.md)
 - [InlineResponse20051DataCurrency](docs/InlineResponse20051DataCurrency.md)
 - [InlineResponse20051DataInterestRate](docs/InlineResponse20051DataInterestRate.md)
 - [InlineResponse20051DataInterestRateAnnualized](docs/InlineResponse20051DataInterestRateAnnualized.md)
 - [InlineResponse20051DataInterestRatePeriodic](docs/InlineResponse20051DataInterestRatePeriodic.md)
 - [InlineResponse20051DataInterestRateType](docs/InlineResponse20051DataInterestRateType.md)
 - [InlineResponse20051DataPeriod](docs/InlineResponse20051DataPeriod.md)
 - [InlineResponse20052](docs/InlineResponse20052.md)
 - [InlineResponse20052Data](docs/InlineResponse20052Data.md)
 - [InlineResponse20053](docs/InlineResponse20053.md)
 - [InlineResponse20054](docs/InlineResponse20054.md)
 - [InlineResponse20054Data](docs/InlineResponse20054Data.md)
 - [InlineResponse20054DataDayCountConvention](docs/InlineResponse20054DataDayCountConvention.md)
 - [InlineResponse20054DataInterestRate](docs/InlineResponse20054DataInterestRate.md)
 - [InlineResponse20054DataInterestRateCurrent](docs/InlineResponse20054DataInterestRateCurrent.md)
 - [InlineResponse20054DataInterestRateCurrentAccruedInterest](docs/InlineResponse20054DataInterestRateCurrentAccruedInterest.md)
 - [InlineResponse20054DataInterestRateCurrentType](docs/InlineResponse20054DataInterestRateCurrentType.md)
 - [InlineResponse20054DataInterestRateFinal](docs/InlineResponse20054DataInterestRateFinal.md)
 - [InlineResponse20054DataInterestRateInitial](docs/InlineResponse20054DataInterestRateInitial.md)
 - [InlineResponse20054DataOccurrence](docs/InlineResponse20054DataOccurrence.md)
 - [InlineResponse20054DataOccurrenceFrequency](docs/InlineResponse20054DataOccurrenceFrequency.md)
 - [InlineResponse20055](docs/InlineResponse20055.md)
 - [InlineResponse20055Data](docs/InlineResponse20055Data.md)
 - [InlineResponse20055DataValidity](docs/InlineResponse20055DataValidity.md)
 - [InlineResponse20056](docs/InlineResponse20056.md)
 - [InlineResponse20056Data](docs/InlineResponse20056Data.md)
 - [InlineResponse20056Status](docs/InlineResponse20056Status.md)
 - [InlineResponse20057](docs/InlineResponse20057.md)
 - [InlineResponse20057Data](docs/InlineResponse20057Data.md)
 - [InlineResponse20057Status](docs/InlineResponse20057Status.md)
 - [InlineResponse20058](docs/InlineResponse20058.md)
 - [InlineResponse20058Data](docs/InlineResponse20058Data.md)
 - [InlineResponse20059](docs/InlineResponse20059.md)
 - [InlineResponse20059Data](docs/InlineResponse20059Data.md)
 - [InlineResponse20059DataInstrument](docs/InlineResponse20059DataInstrument.md)
 - [InlineResponse2005Data](docs/InlineResponse2005Data.md)
 - [InlineResponse2006](docs/InlineResponse2006.md)
 - [InlineResponse20060](docs/InlineResponse20060.md)
 - [InlineResponse20060Data](docs/InlineResponse20060Data.md)
 - [InlineResponse20060LegalEntities](docs/InlineResponse20060LegalEntities.md)
 - [InlineResponse20060LegalEntitiesBackgroundTexts](docs/InlineResponse20060LegalEntitiesBackgroundTexts.md)
 - [InlineResponse20060LegalEntitiesBackgroundTextsType](docs/InlineResponse20060LegalEntitiesBackgroundTextsType.md)
 - [InlineResponse20061](docs/InlineResponse20061.md)
 - [InlineResponse20061Data](docs/InlineResponse20061Data.md)
 - [InlineResponse20061LegalEntities](docs/InlineResponse20061LegalEntities.md)
 - [InlineResponse20062](docs/InlineResponse20062.md)
 - [InlineResponse20062Data](docs/InlineResponse20062Data.md)
 - [InlineResponse20062DataCostsAndCharges](docs/InlineResponse20062DataCostsAndCharges.md)
 - [InlineResponse20062DataCostsAndChargesExAnte](docs/InlineResponse20062DataCostsAndChargesExAnte.md)
 - [InlineResponse20062DataCostsAndChargesExAnteDistributionFee](docs/InlineResponse20062DataCostsAndChargesExAnteDistributionFee.md)
 - [InlineResponse20062DataCostsAndChargesExAnteIncidentalCosts](docs/InlineResponse20062DataCostsAndChargesExAnteIncidentalCosts.md)
 - [InlineResponse20062DataCostsAndChargesExAnteItaly](docs/InlineResponse20062DataCostsAndChargesExAnteItaly.md)
 - [InlineResponse20062DataCostsAndChargesExAnteItalyOneOffMaximumFixedEntryCost](docs/InlineResponse20062DataCostsAndChargesExAnteItalyOneOffMaximumFixedEntryCost.md)
 - [InlineResponse20062DataCostsAndChargesExAnteItalyOneOffMaximumFixedExitCost](docs/InlineResponse20062DataCostsAndChargesExAnteItalyOneOffMaximumFixedExitCost.md)
 - [InlineResponse20062DataCostsAndChargesExAnteManagementFee](docs/InlineResponse20062DataCostsAndChargesExAnteManagementFee.md)
 - [InlineResponse20062DataCostsAndChargesExAnteOneOffEntryCost](docs/InlineResponse20062DataCostsAndChargesExAnteOneOffEntryCost.md)
 - [InlineResponse20062DataCostsAndChargesExAnteOneOffEntryCostValueUnit](docs/InlineResponse20062DataCostsAndChargesExAnteOneOffEntryCostValueUnit.md)
 - [InlineResponse20062DataCostsAndChargesExAnteOneOffMaximumAcquiredEntryCost](docs/InlineResponse20062DataCostsAndChargesExAnteOneOffMaximumAcquiredEntryCost.md)
 - [InlineResponse20062DataCostsAndChargesExAnteOneOffMaximumAcquiredExitCost](docs/InlineResponse20062DataCostsAndChargesExAnteOneOffMaximumAcquiredExitCost.md)
 - [InlineResponse20062DataCostsAndChargesExAnteOneOffMaximumExitCost](docs/InlineResponse20062DataCostsAndChargesExAnteOneOffMaximumExitCost.md)
 - [InlineResponse20062DataCostsAndChargesExAnteOneOffPriorRHPExitCost](docs/InlineResponse20062DataCostsAndChargesExAnteOneOffPriorRHPExitCost.md)
 - [InlineResponse20062DataCostsAndChargesExAnteOneOffTypicalExitCost](docs/InlineResponse20062DataCostsAndChargesExAnteOneOffTypicalExitCost.md)
 - [InlineResponse20062DataCostsAndChargesExAnteOngoingCosts](docs/InlineResponse20062DataCostsAndChargesExAnteOngoingCosts.md)
 - [InlineResponse20062DataCostsAndChargesExAnteTransactionCosts](docs/InlineResponse20062DataCostsAndChargesExAnteTransactionCosts.md)
 - [InlineResponse20062DataCostsAndChargesExPost](docs/InlineResponse20062DataCostsAndChargesExPost.md)
 - [InlineResponse20062DataCostsAndChargesExPostDistributionFee](docs/InlineResponse20062DataCostsAndChargesExPostDistributionFee.md)
 - [InlineResponse20062DataCostsAndChargesExPostIncidentalCosts](docs/InlineResponse20062DataCostsAndChargesExPostIncidentalCosts.md)
 - [InlineResponse20062DataCostsAndChargesExPostManagementFee](docs/InlineResponse20062DataCostsAndChargesExPostManagementFee.md)
 - [InlineResponse20062DataCostsAndChargesExPostOneOffEntryCost](docs/InlineResponse20062DataCostsAndChargesExPostOneOffEntryCost.md)
 - [InlineResponse20062DataCostsAndChargesExPostOneOffExitCost](docs/InlineResponse20062DataCostsAndChargesExPostOneOffExitCost.md)
 - [InlineResponse20062DataCostsAndChargesExPostOngoingCostAccumulated](docs/InlineResponse20062DataCostsAndChargesExPostOngoingCostAccumulated.md)
 - [InlineResponse20062DataCostsAndChargesExPostOngoingCosts](docs/InlineResponse20062DataCostsAndChargesExPostOngoingCosts.md)
 - [InlineResponse20062DataCostsAndChargesExPostTransactionCosts](docs/InlineResponse20062DataCostsAndChargesExPostTransactionCosts.md)
 - [InlineResponse20062DataDistributionChannel](docs/InlineResponse20062DataDistributionChannel.md)
 - [InlineResponse20062DataGeneral](docs/InlineResponse20062DataGeneral.md)
 - [InlineResponse20062DataGeneralCurrency](docs/InlineResponse20062DataGeneralCurrency.md)
 - [InlineResponse20062DataGeneralFund](docs/InlineResponse20062DataGeneralFund.md)
 - [InlineResponse20062DataGeneralFundDomicile](docs/InlineResponse20062DataGeneralFundDomicile.md)
 - [InlineResponse20062DataGeneralGuarantor](docs/InlineResponse20062DataGeneralGuarantor.md)
 - [InlineResponse20062DataGeneralIssuer](docs/InlineResponse20062DataGeneralIssuer.md)
 - [InlineResponse20062DataGeneralLegalStructure](docs/InlineResponse20062DataGeneralLegalStructure.md)
 - [InlineResponse20062DataGeneralManufacturer](docs/InlineResponse20062DataGeneralManufacturer.md)
 - [InlineResponse20062DataGeneralType](docs/InlineResponse20062DataGeneralType.md)
 - [InlineResponse20062DataTargetMarket](docs/InlineResponse20062DataTargetMarket.md)
 - [InlineResponse20062DataTargetMarketAbilityToBearLosses](docs/InlineResponse20062DataTargetMarketAbilityToBearLosses.md)
 - [InlineResponse20062DataTargetMarketClientObjectivesAndNeeds](docs/InlineResponse20062DataTargetMarketClientObjectivesAndNeeds.md)
 - [InlineResponse20062DataTargetMarketClientObjectivesAndNeedsReturnProfile](docs/InlineResponse20062DataTargetMarketClientObjectivesAndNeedsReturnProfile.md)
 - [InlineResponse20062DataTargetMarketClientObjectivesAndNeedsReturnProfileGermany](docs/InlineResponse20062DataTargetMarketClientObjectivesAndNeedsReturnProfileGermany.md)
 - [InlineResponse20062DataTargetMarketInvestorType](docs/InlineResponse20062DataTargetMarketInvestorType.md)
 - [InlineResponse20062DataTargetMarketKnowledgeAndExperience](docs/InlineResponse20062DataTargetMarketKnowledgeAndExperience.md)
 - [InlineResponse20062DataTargetMarketKnowledgeAndExperienceGermany](docs/InlineResponse20062DataTargetMarketKnowledgeAndExperienceGermany.md)
 - [InlineResponse20062DataTargetMarketRecommendedHoldingPeriod](docs/InlineResponse20062DataTargetMarketRecommendedHoldingPeriod.md)
 - [InlineResponse20062DataTargetMarketRiskTolerance](docs/InlineResponse20062DataTargetMarketRiskTolerance.md)
 - [InlineResponse20062DataTargetMarketRiskToleranceGermany](docs/InlineResponse20062DataTargetMarketRiskToleranceGermany.md)
 - [InlineResponse20062DataTargetMarketRiskToleranceInternalRiskRating](docs/InlineResponse20062DataTargetMarketRiskToleranceInternalRiskRating.md)
 - [InlineResponse20062DataTargetMarketRiskToleranceSpain](docs/InlineResponse20062DataTargetMarketRiskToleranceSpain.md)
 - [InlineResponse20062DataTargetMarketRiskToleranceSri](docs/InlineResponse20062DataTargetMarketRiskToleranceSri.md)
 - [InlineResponse20062DataTargetMarketRiskToleranceSrri](docs/InlineResponse20062DataTargetMarketRiskToleranceSrri.md)
 - [InlineResponse20063](docs/InlineResponse20063.md)
 - [InlineResponse20063Current](docs/InlineResponse20063Current.md)
 - [InlineResponse20063Data](docs/InlineResponse20063Data.md)
 - [InlineResponse20063Previous](docs/InlineResponse20063Previous.md)
 - [InlineResponse20063Ratings](docs/InlineResponse20063Ratings.md)
 - [InlineResponse20063System](docs/InlineResponse20063System.md)
 - [InlineResponse20064](docs/InlineResponse20064.md)
 - [InlineResponse20064Data](docs/InlineResponse20064Data.md)
 - [InlineResponse20064DataInstrument](docs/InlineResponse20064DataInstrument.md)
 - [InlineResponse20064DataMarket](docs/InlineResponse20064DataMarket.md)
 - [InlineResponse20064DataValueUnit](docs/InlineResponse20064DataValueUnit.md)
 - [InlineResponse20065](docs/InlineResponse20065.md)
 - [InlineResponse20065Data](docs/InlineResponse20065Data.md)
 - [InlineResponse20065Status](docs/InlineResponse20065Status.md)
 - [InlineResponse20066](docs/InlineResponse20066.md)
 - [InlineResponse20066Data](docs/InlineResponse20066Data.md)
 - [InlineResponse20066DataInstrument](docs/InlineResponse20066DataInstrument.md)
 - [InlineResponse20066DataMarket](docs/InlineResponse20066DataMarket.md)
 - [InlineResponse20066DataValueUnit](docs/InlineResponse20066DataValueUnit.md)
 - [InlineResponse20067](docs/InlineResponse20067.md)
 - [InlineResponse20067Data](docs/InlineResponse20067Data.md)
 - [InlineResponse20067Fsym](docs/InlineResponse20067Fsym.md)
 - [InlineResponse20067FsymListing](docs/InlineResponse20067FsymListing.md)
 - [InlineResponse20067FsymRegional](docs/InlineResponse20067FsymRegional.md)
 - [InlineResponse20068](docs/InlineResponse20068.md)
 - [InlineResponse20068Data](docs/InlineResponse20068Data.md)
 - [InlineResponse20068Instrument](docs/InlineResponse20068Instrument.md)
 - [InlineResponse20069](docs/InlineResponse20069.md)
 - [InlineResponse20069Data](docs/InlineResponse20069Data.md)
 - [InlineResponse20069DataInstrument](docs/InlineResponse20069DataInstrument.md)
 - [InlineResponse20069DataRegional](docs/InlineResponse20069DataRegional.md)
 - [InlineResponse20069DataRegionalListing](docs/InlineResponse20069DataRegionalListing.md)
 - [InlineResponse2006Data](docs/InlineResponse2006Data.md)
 - [InlineResponse2007](docs/InlineResponse2007.md)
 - [InlineResponse20070](docs/InlineResponse20070.md)
 - [InlineResponse20070Data](docs/InlineResponse20070Data.md)
 - [InlineResponse20070DataInstrument](docs/InlineResponse20070DataInstrument.md)
 - [InlineResponse20070DataListing](docs/InlineResponse20070DataListing.md)
 - [InlineResponse20070DataNotation](docs/InlineResponse20070DataNotation.md)
 - [InlineResponse20070DataRegional](docs/InlineResponse20070DataRegional.md)
 - [InlineResponse20071](docs/InlineResponse20071.md)
 - [InlineResponse20071Data](docs/InlineResponse20071Data.md)
 - [InlineResponse20072](docs/InlineResponse20072.md)
 - [InlineResponse20072Data](docs/InlineResponse20072Data.md)
 - [InlineResponse20072DataHigh](docs/InlineResponse20072DataHigh.md)
 - [InlineResponse20072DataLow](docs/InlineResponse20072DataLow.md)
 - [InlineResponse20072DataPerformance](docs/InlineResponse20072DataPerformance.md)
 - [InlineResponse20072DataTradingVolume](docs/InlineResponse20072DataTradingVolume.md)
 - [InlineResponse20073](docs/InlineResponse20073.md)
 - [InlineResponse20073Data](docs/InlineResponse20073Data.md)
 - [InlineResponse20073Status](docs/InlineResponse20073Status.md)
 - [InlineResponse20074](docs/InlineResponse20074.md)
 - [InlineResponse20074Data](docs/InlineResponse20074Data.md)
 - [InlineResponse20075](docs/InlineResponse20075.md)
 - [InlineResponse20075Data](docs/InlineResponse20075Data.md)
 - [InlineResponse20076](docs/InlineResponse20076.md)
 - [InlineResponse20076Data](docs/InlineResponse20076Data.md)
 - [InlineResponse20077](docs/InlineResponse20077.md)
 - [InlineResponse20077Data](docs/InlineResponse20077Data.md)
 - [InlineResponse20078](docs/InlineResponse20078.md)
 - [InlineResponse20078Data](docs/InlineResponse20078Data.md)
 - [InlineResponse20078DataMarket](docs/InlineResponse20078DataMarket.md)
 - [InlineResponse20079](docs/InlineResponse20079.md)
 - [InlineResponse20079Data](docs/InlineResponse20079Data.md)
 - [InlineResponse20079DataAccumulated](docs/InlineResponse20079DataAccumulated.md)
 - [InlineResponse20079DataCurrency](docs/InlineResponse20079DataCurrency.md)
 - [InlineResponse20079DataFirst](docs/InlineResponse20079DataFirst.md)
 - [InlineResponse20079DataHigh](docs/InlineResponse20079DataHigh.md)
 - [InlineResponse20079DataLatest](docs/InlineResponse20079DataLatest.md)
 - [InlineResponse20079DataLatestPerformance](docs/InlineResponse20079DataLatestPerformance.md)
 - [InlineResponse20079DataLatestPerformanceIntraday](docs/InlineResponse20079DataLatestPerformanceIntraday.md)
 - [InlineResponse20079DataLow](docs/InlineResponse20079DataLow.md)
 - [InlineResponse20079DataMarket](docs/InlineResponse20079DataMarket.md)
 - [InlineResponse20079DataPreviousClose](docs/InlineResponse20079DataPreviousClose.md)
 - [InlineResponse20079DataValueUnit](docs/InlineResponse20079DataValueUnit.md)
 - [InlineResponse2007Data](docs/InlineResponse2007Data.md)
 - [InlineResponse2008](docs/InlineResponse2008.md)
 - [InlineResponse20080](docs/InlineResponse20080.md)
 - [InlineResponse20080Accumulated](docs/InlineResponse20080Accumulated.md)
 - [InlineResponse20080Data](docs/InlineResponse20080Data.md)
 - [InlineResponse20080First](docs/InlineResponse20080First.md)
 - [InlineResponse20080High](docs/InlineResponse20080High.md)
 - [InlineResponse20080Latest](docs/InlineResponse20080Latest.md)
 - [InlineResponse20080LatestPerformance](docs/InlineResponse20080LatestPerformance.md)
 - [InlineResponse20080LatestPerformanceIntraday](docs/InlineResponse20080LatestPerformanceIntraday.md)
 - [InlineResponse20080Low](docs/InlineResponse20080Low.md)
 - [InlineResponse20080PreviousClose](docs/InlineResponse20080PreviousClose.md)
 - [InlineResponse20081](docs/InlineResponse20081.md)
 - [InlineResponse20081Data](docs/InlineResponse20081Data.md)
 - [InlineResponse20081DataAsk](docs/InlineResponse20081DataAsk.md)
 - [InlineResponse20081DataBid](docs/InlineResponse20081DataBid.md)
 - [InlineResponse20082](docs/InlineResponse20082.md)
 - [InlineResponse20082Ask](docs/InlineResponse20082Ask.md)
 - [InlineResponse20082Bid](docs/InlineResponse20082Bid.md)
 - [InlineResponse20082Data](docs/InlineResponse20082Data.md)
 - [InlineResponse20083](docs/InlineResponse20083.md)
 - [InlineResponse20083Data](docs/InlineResponse20083Data.md)
 - [InlineResponse20083DataAsks](docs/InlineResponse20083DataAsks.md)
 - [InlineResponse20084](docs/InlineResponse20084.md)
 - [InlineResponse20084Data](docs/InlineResponse20084Data.md)
 - [InlineResponse20084DataAsks](docs/InlineResponse20084DataAsks.md)
 - [InlineResponse20085](docs/InlineResponse20085.md)
 - [InlineResponse20085Data](docs/InlineResponse20085Data.md)
 - [InlineResponse20085DataEvents](docs/InlineResponse20085DataEvents.md)
 - [InlineResponse20085DataRange](docs/InlineResponse20085DataRange.md)
 - [InlineResponse20085DataType](docs/InlineResponse20085DataType.md)
 - [InlineResponse20085Meta](docs/InlineResponse20085Meta.md)
 - [InlineResponse20086](docs/InlineResponse20086.md)
 - [InlineResponse20086Data](docs/InlineResponse20086Data.md)
 - [InlineResponse20087](docs/InlineResponse20087.md)
 - [InlineResponse20087Data](docs/InlineResponse20087Data.md)
 - [InlineResponse20088](docs/InlineResponse20088.md)
 - [InlineResponse20088Data](docs/InlineResponse20088Data.md)
 - [InlineResponse20088Instrument](docs/InlineResponse20088Instrument.md)
 - [InlineResponse20088InstrumentNsin](docs/InlineResponse20088InstrumentNsin.md)
 - [InlineResponse20088Nsin](docs/InlineResponse20088Nsin.md)
 - [InlineResponse20088Price](docs/InlineResponse20088Price.md)
 - [InlineResponse20089](docs/InlineResponse20089.md)
 - [InlineResponse20089Data](docs/InlineResponse20089Data.md)
 - [InlineResponse20089Instrument](docs/InlineResponse20089Instrument.md)
 - [InlineResponse20089InstrumentAssetClass](docs/InlineResponse20089InstrumentAssetClass.md)
 - [InlineResponse20089InstrumentName](docs/InlineResponse20089InstrumentName.md)
 - [InlineResponse20089InstrumentNameDefault](docs/InlineResponse20089InstrumentNameDefault.md)
 - [InlineResponse20089TradingValue](docs/InlineResponse20089TradingValue.md)
 - [InlineResponse20089TradingValueAverage](docs/InlineResponse20089TradingValueAverage.md)
 - [InlineResponse20089ValueUnit](docs/InlineResponse20089ValueUnit.md)
 - [InlineResponse2008Data](docs/InlineResponse2008Data.md)
 - [InlineResponse2008DataCountry](docs/InlineResponse2008DataCountry.md)
 - [InlineResponse2008DataGroup](docs/InlineResponse2008DataGroup.md)
 - [InlineResponse2008DataTimezone](docs/InlineResponse2008DataTimezone.md)
 - [InlineResponse2008DataType](docs/InlineResponse2008DataType.md)
 - [InlineResponse2009](docs/InlineResponse2009.md)
 - [InlineResponse20090](docs/InlineResponse20090.md)
 - [InlineResponse20090Data](docs/InlineResponse20090Data.md)
 - [InlineResponse20090Instrument](docs/InlineResponse20090Instrument.md)
 - [InlineResponse2009Country](docs/InlineResponse2009Country.md)
 - [InlineResponse2009Data](docs/InlineResponse2009Data.md)
 - [InlineResponse2009Group](docs/InlineResponse2009Group.md)
 - [InlineResponse2009Meta](docs/InlineResponse2009Meta.md)
 - [InlineResponse2009Type](docs/InlineResponse2009Type.md)
 - [InlineResponse200Data](docs/InlineResponse200Data.md)
 - [InlineResponse200Meta](docs/InlineResponse200Meta.md)
 - [InstrumentBackgroundTextTypeListData](docs/InstrumentBackgroundTextTypeListData.md)
 - [InstrumentBackgroundTextTypeListDataFilter](docs/InstrumentBackgroundTextTypeListDataFilter.md)
 - [InstrumentBackgroundTextTypeListMeta](docs/InstrumentBackgroundTextTypeListMeta.md)
 - [InstrumentBenchmarkListData](docs/InstrumentBenchmarkListData.md)
 - [InstrumentBenchmarkListDataFilter](docs/InstrumentBenchmarkListDataFilter.md)
 - [InstrumentCategoryListData](docs/InstrumentCategoryListData.md)
 - [InstrumentCategoryListDataFilter](docs/InstrumentCategoryListDataFilter.md)
 - [InstrumentCategoryListDataFilterDataset](docs/InstrumentCategoryListDataFilterDataset.md)
 - [InstrumentCategoryListMeta](docs/InstrumentCategoryListMeta.md)
 - [InstrumentCompliancePropertyListData](docs/InstrumentCompliancePropertyListData.md)
 - [InstrumentCompliancePropertyListDataFilter](docs/InstrumentCompliancePropertyListDataFilter.md)
 - [InstrumentCrossReferenceListByISINData](docs/InstrumentCrossReferenceListByISINData.md)
 - [InstrumentCrossReferenceListByWKNData](docs/InstrumentCrossReferenceListByWKNData.md)
 - [InstrumentRatingGradeListData](docs/InstrumentRatingGradeListData.md)
 - [InstrumentRatingGradeListDataFilter](docs/InstrumentRatingGradeListDataFilter.md)
 - [InstrumentRatingGradeListDataFilterRatingSystem](docs/InstrumentRatingGradeListDataFilterRatingSystem.md)
 - [NotationCrossReferenceFactSetIdentifierListByFactSetIdentifierData](docs/NotationCrossReferenceFactSetIdentifierListByFactSetIdentifierData.md)
 - [NotationCrossReferenceFactSetIdentifierListByInstrumentData](docs/NotationCrossReferenceFactSetIdentifierListByInstrumentData.md)
 - [NotationCrossReferenceListByISINData](docs/NotationCrossReferenceListByISINData.md)
 - [NotationCrossReferenceListByInstrumentData](docs/NotationCrossReferenceListByInstrumentData.md)
 - [NotationCrossReferenceListByInstrumentDataFilter](docs/NotationCrossReferenceListByInstrumentDataFilter.md)
 - [NotationCrossReferenceListByInstrumentDataFilterMarkets](docs/NotationCrossReferenceListByInstrumentDataFilterMarkets.md)
 - [NotationCrossReferenceListByInstrumentDataFilterValueUnits](docs/NotationCrossReferenceListByInstrumentDataFilterValueUnits.md)
 - [NotationCrossReferenceListBySymbolData](docs/NotationCrossReferenceListBySymbolData.md)
 - [NotationSearchByTextData](docs/NotationSearchByTextData.md)
 - [NotationSearchByTextDataAssetClasses](docs/NotationSearchByTextDataAssetClasses.md)
 - [NotationSearchByTextDataMarket](docs/NotationSearchByTextDataMarket.md)
 - [NotationSearchByTextDataMarketOrder](docs/NotationSearchByTextDataMarketOrder.md)
 - [NotationSearchByTextDataText](docs/NotationSearchByTextDataText.md)
 - [NotationSearchByTextDataTradingValue](docs/NotationSearchByTextDataTradingValue.md)
 - [NotationSearchByTextDataTradingValueAverage](docs/NotationSearchByTextDataTradingValueAverage.md)
 - [NotationSearchByTextDataTradingValueAverageDays30](docs/NotationSearchByTextDataTradingValueAverageDays30.md)
 - [NotationSearchByTextDataTradingValueAverageDays30Maximum](docs/NotationSearchByTextDataTradingValueAverageDays30Maximum.md)
 - [NotationSearchByTextDataTradingValueAverageDays30Minimum](docs/NotationSearchByTextDataTradingValueAverageDays30Minimum.md)
 - [NotationSearchByTextDataValidation](docs/NotationSearchByTextDataValidation.md)
 - [NotationSearchByTextDataValidationMarket](docs/NotationSearchByTextDataValidationMarket.md)
 - [NotationSearchByTextDataValidationMarketPriority](docs/NotationSearchByTextDataValidationMarketPriority.md)
 - [NotationSearchByTextDataValidationMarketSelection](docs/NotationSearchByTextDataValidationMarketSelection.md)
 - [NotationSearchByTextDataValidationMarketSelectionExclude](docs/NotationSearchByTextDataValidationMarketSelectionExclude.md)
 - [NotationSearchByTextDataValidationMarketSelectionRestrict](docs/NotationSearchByTextDataValidationMarketSelectionRestrict.md)
 - [NotationSearchByTextDataValidationPrices](docs/NotationSearchByTextDataValidationPrices.md)
 - [NotationSearchByTextDataValidationPricesLatest](docs/NotationSearchByTextDataValidationPricesLatest.md)
 - [NotationSearchByTextDataValidationPricesPrevious](docs/NotationSearchByTextDataValidationPricesPrevious.md)
 - [NotationSearchByTextDataValidationValueUnit](docs/NotationSearchByTextDataValidationValueUnit.md)
 - [NotationSearchByTextDataValidationValueUnitSelection](docs/NotationSearchByTextDataValidationValueUnitSelection.md)
 - [NotationSearchByTextDataValidationValueUnitSelectionExclude](docs/NotationSearchByTextDataValidationValueUnitSelectionExclude.md)
 - [NotationSearchByTextDataValidationValueUnitSelectionRestrict](docs/NotationSearchByTextDataValidationValueUnitSelectionRestrict.md)
 - [NotationSearchByTextMeta](docs/NotationSearchByTextMeta.md)
 - [OffsetBasedPaginationOutputObject](docs/OffsetBasedPaginationOutputObject.md)
 - [OffsetBasedPaginationOutputObjectWithoutTotal](docs/OffsetBasedPaginationOutputObjectWithoutTotal.md)
 - [PartialOutputObject](docs/PartialOutputObject.md)
 - [PricesTradingScheduleEventListData](docs/PricesTradingScheduleEventListData.md)
 - [PricesTradingScheduleEventListDataFilter](docs/PricesTradingScheduleEventListDataFilter.md)
 - [PricesTradingScheduleEventListDataFilterRange](docs/PricesTradingScheduleEventListDataFilterRange.md)
 - [PricesTradingScheduleEventListMeta](docs/PricesTradingScheduleEventListMeta.md)
 - [PricesTradingScheduleEventListMetaPagination](docs/PricesTradingScheduleEventListMetaPagination.md)
 - [StatusObject](docs/StatusObject.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
